# vpnsutils

./: .coveragerc  .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-testing.txt  requirements.txt
config/samples/: defaults.ini.sample  makerep.ini.sample  pshell.ini.sample  snapstat.ini.sample  testing.ini.sample  websrv-dev.ini.sample  websrv.ini.sample  zeo.config.sample
helpers/: checktime.py  misc.py
tests/: conftest.py  test_functional.py  test_views.py
vpnsutils/: __init__.py  checktime.py  makerep.py  pshell.py  routes.py  settings.py  snapstat.py
vpnsutils/templates/: layout.jinja2  mytemplate.jinja2
vpnsutils/views/: default.py  notfound.py
zmodels/: __init__.py  misc.py  tcm.py
